--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,18 @@
 {
   "name": "Calculadora de Costos de Recetas",
   "short_name": "Costos Recetas",
-  "description": "Calcula costos, márgenes y precios de venta de recetas de manera profesional",
-  "start_url": "/",
+  "start_url": "/mipwa/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#5D5CDE",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "/mipwa/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "/mipwa/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
